@@ -9,6 +9,8 @@ Changes in lmfit-4.0
   - lmcurve.h no longer depends on lmmin.h, but only on new lmstruct.h
   - low-level API lmdif is removed (code integrated in lmmin)
   - new control parameter 'pivot' (default: pivoting is used, as before)
+  - new structure lm_princon_struct, generalizing printflags
+  - in consequence thereof, new parameter lists for lmcurve_fit and lmmin 
 - configure.ac: cleaned up, and inserted comments
 - ensure strict C90 compliance: no C++ comments; replace non-standard
   struct assignement (reported by Elio Mazzocca, using LCC)
